# procdraw-old

./: .clang-format  .clang_complete  .dir-locals.el  .editorconfig  .gitignore  .gitmodules  .nowignore  .projectile  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  LICENSE.txt  Makefile  Procdraw.proj  Procdraw.sln  Procdraw.sublime-project  README.md  TODO.org  Tasks.proj  alsa_midi_client.cc  alsa_midi_client.h  appveyor.yml  build.ninja.prototype  camera.cc  cli.cc  cli.h  command_processor.h  configure.py  font_config.h  frame_counter.cc  frame_counter.h  ft_text_renderer.cc  ft_text_renderer.h  gl_util.cc  gl_util.h  globals.cc  globals.h  glrenderer.cc  glrenderer.h  (+30 more)
src/: CMakeLists.txt  Color.cpp  Color.h  D3D11Graphics.cpp  D3D11Graphics.h  Interpreter.cpp  Interpreter.h  Printer.cpp  Printer.h  ProcdrawApp.cpp  ProcdrawLib.vcxproj  ProcdrawLib.vcxproj.filters  ProcdrawMath.cpp  ProcdrawMath.h  Reader.cpp  Reader.h  VirtualMachine.cpp  VirtualMachine.h  WinUtils.h  main.cpp  pch.cpp  pch.h  stdafx.cpp
src/alsa_midi/: CMakeLists.txt  alsa_midi_client.cpp  alsa_midi_client.h
src/check_cpp_files/: main.cpp
src/graphics/: CMakeLists.txt  bitmap_text_renderer.cpp  camera.cpp  camera.h  font_config.h  freetype_font_loader.cpp  ft_text_renderer.cpp  ft_text_renderer.h  gl_util.cpp  glrenderer.cpp  glrenderer.h  sdl_util.cpp  sdl_util.h
src/interpreter/: CMakeLists.txt  line_buffer.cpp  line_buffer.h  lisp_functions.cpp  lisp_functions.h  lisp_interpreter.cpp  lisp_interpreter.h  lisp_memory.cpp  lisp_memory.h  lisp_printer.cpp  lisp_reader.cpp  lsystem.cpp  prettyprinter.cpp  signals.cpp  signals.h  util.cpp  util.h
src/lib/: Colour.cpp  Colour.h  D3D11Graphics.cpp  D3D11Graphics.h  FrameTimer.cpp  FrameTimer.h  Interpreter.cpp  Interpreter.h  InterpreterTypes.h  Printer.cpp  Printer.h  ProcdrawApp.cpp  ProcdrawApp.h  ProcdrawMath.cpp  ProcdrawMath.h  Reader.cpp  Reader.h  SimpleMovingAverage.h  WinUtils.cpp  WinUtils.h
src/procdraw/: CMakeLists.txt  bitmap_font_metrics.cpp  bitmap_font_metrics.h  bitmap_glyph_metrics.h  cli.cpp  cli.h  color.cpp  color.h  command_processor.h  console.cpp  console.h  frame_counter.cpp  frame_counter.h  line_buffer.cpp  line_buffer.h  lsystem.cpp  lsystem.h  main.cpp  math.cpp  math.h  midi_listener.h  procdraw_app.cpp  procdraw_app.h  procdraw_app_lisp.cpp  procdraw_app_lisp.h  simple_moving_average.h  text_layout.h  text_layout_engine.h
src/procdraw_alsa_midi/: alsa_midi_client.cpp  alsa_midi_client.h
src/procdraw_app/: main.cpp  procdraw_app.cpp  procdraw_app.h  procdraw_app_lisp.cpp  procdraw_app_lisp.h
src/procdraw_catch_tests/: test_lisp_interpreter.cpp  test_lisp_reader.cpp  test_signals.cpp
src/procdraw_core/: bitmap_font_metrics.cpp  bitmap_font_metrics.h  color.cpp  command_processor.h  console.cpp  console.h  console_line.h  font_metrics.cpp  frame_counter.cpp  frame_counter.h  line_buffer.cpp  lsystem.cpp  math.cpp  text_layout_engine.h  utils.cpp  utils.h
src/procdraw_core_tests/: color_test.cpp  function_spec_checker.cpp  function_spec_checker.h  function_spec_checker_test.cpp  function_specs_test.cpp  line_buffer_test.cpp  lsystem_test.cpp  math_test.cpp  simple_moving_average_test.cpp  text_layout_engine_test.cpp  text_layout_test.cpp  utils_test.cpp
src/procdraw_lib/: CMakeLists.txt  color.cpp  color.h  command_processor.h  line_buffer.cpp  line_buffer.h  lisp_functions.cpp  lisp_functions.h  lisp_interpreter.cpp  lisp_interpreter.h  lisp_memory.cpp  lisp_memory.h  lisp_reader.cpp  lisp_reader.h  lsystem.cpp  lsystem.h  signals.cpp  signals.h  util.cpp  util.h
src/procdraw_main/: main.cpp
src/procdraw_opengl/: bitmap_text_renderer.cpp  bitmap_text_renderer.h  camera.cpp  console.cpp  console.h  frame_counter.cpp  frame_counter.h  freetype_font_loader.cpp  freetype_font_loader.h  gl_util.cpp  glrenderer.cpp  glrenderer.h  procdraw_app.cpp  procdraw_app.h  procdraw_app_lisp.cpp  procdraw_app_lisp.h  sdl_util.cpp
src/procdraw_sdl/: CMakeLists.txt  glrenderer.cpp  main.cpp  procdraw_app_sdl.cpp  procdraw_app_sdl.h  procdraw_app_sdl_lisp.cpp  procdraw_app_sdl_lisp.h  repl.h  sdl_util.cpp  sdl_util.h
src/procdraw_tests/: color_test.cpp  function_spec_checker.cpp  text_layout_test.cpp
src/procdraw_win/: CMakeLists.txt  a11y.cpp  a11y.h  d3d11graphics.cpp  d3d11graphics.h  frame_counter.cpp  frame_counter.h  procdraw_app.cpp  procdraw_app.h  procdraw_app_lisp.cpp  procdraw_app_lisp.h  resource.h  stdafx.h  win_util.cpp  win_util.h  workspace.cpp  workspace.h
src/procdraw_winmain/: CMakeLists.txt  procdraw.rc  winmain.cpp
src/procrepl/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
src/test_support/: SourceFileChecker.cpp  SourceFileChecker.h  TapReporter.cpp  TapReporter.h
src/tests/: ColourTests.cpp  DocsTester.cpp  DocsTester.h  DocsTesterTests.cpp  FunctionDocsTests.cpp  InterpreterPrintTests.cpp  InterpreterReadTests.cpp  InterpreterTests.cpp  InterpreterTypesTests.cpp  ProcdrawDocs.cpp  ProcdrawDocs.h  ProcdrawMathTests.cpp  SimpleMovingAverageTests.cpp  TestsMain.cpp
src/unit_tests/: ColourTest.cpp  FunctionsTest.cpp  InterpreterPrintTest.cpp  InterpreterReadTest.cpp  InterpreterTest.cpp  InterpreterTypesTest.cpp  ProcdrawMathTest.cpp  SimpleMovingAverageTest.cpp  (+1 more)
src/utils/: color.cpp  (+10 more)
tests/: CMakeLists.txt  ColorTests.cpp  DocTester.cpp  DocTester.h  DocTesterTests.cpp  FunctionDocsTests.cpp  InterpreterPrintTests.cpp  InterpreterReadTests.cpp  InterpreterTests.cpp  PrintTo.cpp  PrintTo.h  ProcdrawManual.cpp  ProcdrawManual.h  ProcdrawMathTests.cpp  ProcdrawTests.vcxproj  ProcdrawTests.vcxproj.filters  TestUtils.cpp  TestUtils.h  ToString.h  VirtualMachineTests.cpp  color_test.cpp  function_spec_checker_test.cpp  function_specs_test.cpp  line_buffer_test.cpp  lsystem_test.cpp  math_test.cpp  pch.h  procdraw_tests_config.h.in  simple_moving_average_test.cpp  stdafx.cpp  test_color.cc  test_line_buffer.cc  test_lisp_interpreter.cc  test_lisp_printer.cc  test_lisp_reader.cc  test_lsystem.cc  test_signals.cc  test_util.cc  text_layout_engine_test.cpp  text_layout_test.cpp  (+1 more)
(+433 files in other folders)
